--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "dependencies": {
     "axios": "^1.6.2",
+    "connect-session-knex": "^4.0.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "knex": "^3.1.0",
     "mysql": "^2.18.1"
   }
