--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "connect-session-knex": "^4.0.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-handlebars": "^7.1.2",
     "express-session": "^1.17.3",
     "knex": "^3.1.0",
     "mysql": "^2.18.1"
